public interface Observer {
    public void update(String news);
}
